2021-12-23  Mark Wielaard  <mark@klomp.org>

	* core-file.c (dwfl_elf_phdr_memory_callback): Check start <
	elf->maximum_size and end - start < minread.

2021-12-20  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Move
	and initialize struct elf_build_id build_id early. Only free memory
	early when no longer needed. Free memory if not NULL at out.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	data and set xlatefrom.d_buf to notes when data is not aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	ph_buffer and set xlatefrom.d_buf to phdrsp when ph_buffer is not
	aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Copy
	buffer and set xlatefrom.d_buf to ehdr when buffer is not aligned.

2021-12-19  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Check
	notes filesz. Rewrite reading of GElf_Nhdr.

2021-12-08  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Make sure
	that dyn_filesz can contain at least one Elf_Dyn and isn't larger than
	possible.

2021-12-08  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Make sure
	that ph_buffer_size has room for at least one phdr.

2021-12-08  Mark Wielaard  <mark@klomp.org>

	* dwfl_segment_report_module.c (dwfl_segment_report_module): Make
	sure the note len increases each iteration.

2021-12-17  Mark Wielaard  <mark@klomp.org>

	* libdwflP.h (dwfl_segment_report_module): Add maxread argument.
	* core-file.c (dwfl_core_file_report): Pass elf->maximum_size to
	dwfl_segment_report_module.
	* dwfl_segment_report_module.c (dwfl_segment_report_module): Add
	maxread argument. Check file_trimmed_end against maxread.
